--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mimeparse",
     "description": "Basic functions for handling mime-types.",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "homepage": "http://github.com/kriskowal/mimeparse/",
     "contributors": [
         "Joe Gregario",
@@ -22,5 +22,5 @@
         "type": "git",
         "url": "http://github.com/kriskowal/mimeparse.git"
     },
-    "main": "mimeparse.js"
+    "main": "lib/mimeparse.js"
 }
