--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "mimeparse",
     "description": "Basic functions for handling mime-types.",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "homepage": "http://github.com/kriskowal/mimeparse/",
     "contributors": [
         "Joe Gregario",
         "J. Chris Anderson <jchris@apache.org>",
-        "Kris Kowal <kris@cixar.com> (http://github.com/kriskowal/)"
+        "Kris Kowal <kris@cixar.com> (http://github.com/kriskowal/)",
+        "Ivan Zuzak <izuzak@gmail.com> (http://ivanzuzak.info)"
     ],
     "bugs": {
         "mail": "kris@cixar.com",
