--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mimeparse",
-    "description": "Basic functions for handling mime-types.",
     "version": "0.1.4",
+    "description": "Basic functions for handling mime-types.",
     "homepage": "http://github.com/kriskowal/mimeparse/",
     "contributors": [
         "Joe Gregario",
@@ -11,7 +11,7 @@
     ],
     "bugs": {
         "mail": "kris@cixar.com",
-        "web": "http://github.com/kriskowal/mimeparse/issues"
+        "url": "http://github.com/kriskowal/mimeparse/issues"
     },
     "licenses": [
         {
